fix text wrap for long data columns

--- a/src/components/GlyphData/style.scss
+++ b/src/components/GlyphData/style.scss
@@ -48,6 +48,7 @@
     font-size: 12px;
     font-weight: 500;
     color: rgba(var(--colorWhite), 0.4);
+    white-space: nowrap;
   }
 
   &__content {
